--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,8 +1,8 @@
 @import './base.css';
 
 #app {
-  max-width: 1280px;
-  /* margin: 0 auto; */
+  /* max-width: 1280px; */
+  margin: 0 auto;
   padding: 2rem;
   font-weight: normal;
 }
@@ -14,6 +14,16 @@ a,
   transition: 0.4s;
   padding: 3px;
 }
+
+@keyframes gradientBorder {
+  from {
+      border: 4px solid #3bc540;
+  }
+  to {
+      border: 4px solid #b2ba4b;
+  }
+}
+
 
 @media (hover: hover) {
   a:hover {
@@ -30,13 +40,12 @@ a,
     background-color: #333;
     display: flex;
     place-items: center;
-    scrollbar-width: 0;
-    scrollbar-color: transparent;
+    overscroll-behavior: none;
   }
 
   #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    /* display: grid;
+    grid-template-columns: 1fr 1fr; */
     padding: 0 2rem;
   }
 }
